# submissions

./: .dockerignore  .gitignore  Dockerfile  REPORT.md  main.py  pyproject.toml
experiments/: icp_algorithm_threshold.py  icp_algorithm_trimmed.py  icp_algorithm_weighted.py  testpoints_eval.py  threshold_eval.py  trimmed_eval.py  weighted_eval.py
src/pointcloud_registration/: icp_algorithm.py  pca_align.py  pca_align_multi.py  utils.py  visualize.py
